--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.1",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.4.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
@@ -42,5 +43,10 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "~4.9.4"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
